# 3d-grapher

./: Cargo.toml  README.md
planners/: User Input.odg
src/: app.rs  graph.rs  graph_launcher.rs  main.rs
src/calculator/: equation_handeler.rs  math.rs  mod.rs
src/graph_launcher/: graph.rs  mod.rs
src/util/: mod.rs
