[package]
name = "grapher-3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poll-promise = { version = "0.1.0", features = ["tokio"] }
tokio = { version = "1.17.0", features = ["full"] }


[dependencies.sdl2]
version = "0.35.2" 
default-features = false

[dev-dependencies]
tokio-test = "0.4.2"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
