[package]
name = "grapher-3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.17.0"
fastcurve_3d = "0.1.1"
gnuplot = "0.0.37"





[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
